add timestamp to request
